--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Meine Tickets</item>
-        <item>Kalender</item>
+        <item>Offline Modus</item>
         <item>Neues Ticket</item>
     </string-array>
 
