fixed #16 und sonderöffnungszeiten

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,6 @@
     <string name="title_activity_eskalation">Eskalation</string>
     <string name="fleet">Fleet</string>
     <string name="switch_verfuegbar_text">Verfügbar</string>
+    <string name="oeffnung">Öffnungszeiten</string>
 
 </resources>
