- Einstellungen richtig Implementiert - Man kann jetzt einstellen ob die app im offlinemodus starten soll  - Kunden anforderungs bogen implementiert  - Bögen werden unter /Download/Jobcontrol gespeichert  - Wenn Ticket erledigt ist dann wird der Bogen gelöscht

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,8 @@
     <string name="switch_verfuegbar_text">Verfügbar</string>
     <string name="oeffnung">Öffnungszeiten</string>
     <string name="button_pdf">PDF</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 
 </resources>
