--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,7 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_logout">Ausloggen</string>
 
-    <!-- Kalender -->
-    <string name="test_text">TEST</string>
-    <string name="test_feld">TEST</string>
-    <string name="kalender">Kalender</string>
-    <string name="new_tickets">Neues Ticket erstellen</string>
-    <string name="my_tickets">Meine Tickets</string>
+
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
@@ -86,6 +81,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+
+    <!-- URLS -->
+    <string name="url_artstamm">http://5.158.136.15/job/android/test/temp/file.csv</string>
+
+
+
+
     <!-- Content Ticket_Details -->
     <string name="firma">Firma</string>
     <string name="adresse">Adresse</string>
@@ -127,6 +129,7 @@
     <string name="button_nextimg">Next</string>
     <string name="widget_name">Jobcontrol ALPHA</string>
     <string name="title_activity_arbeitsschein">Arbeitsschein</string>
+    <string name="test_text">TEST</string>
 
 
 </resources>
